<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="movies">Movies</string>
    <string name="tv_show">TV Show</string>
    <string name="release">Release: %s</string>
    <string name="user_score">User Score: %s</string>
    <string name="overview">Overview</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="popularity">Popularity: %s</string>
    <string name="favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="delete_favorite">Delete Favorite</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="txt_splash_screen_logo">Splash Screen Logo</string>
</resources>